fix: added missing border to select components

--- a/components/select/select-solid.scss
+++ b/components/select/select-solid.scss
@@ -49,6 +49,7 @@
             outline: none;
             padding: $mmf-unit 5*$mmf-unit $mmf-unit $mmf-unit;
             color: map-get($color-basic, 0);
+            border: $mmf-input-border--width $mmf-style--border map-get($color-basic, 4);
             border-radius: $mmf-radius;
         }
         
